--- a/src/PairCalculator/Properties/launchSettings.json
+++ b/src/PairCalculator/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "profiles": {
-    "PairCalculator": {
+    "paircalculator": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5000;https://localhost:5001",
+      "applicationUrl": "http://localhost:5050;https://localhost:5051",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
