--- a/src/PairCalculator/PairCalculator.csproj
+++ b/src/PairCalculator/PairCalculator.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\pair.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
