--- a/src/PairClientA/Properties/launchSettings.json
+++ b/src/PairClientA/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "PairClientA": {
+    "pairclienta": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "environmentVariables": {
