Add RabbitMQ to paircalculator
Add RabbitMQ to paircalculator

--- a/src/tye.yaml
+++ b/src/tye.yaml
@@ -11,14 +11,18 @@ services:
   - name: pairclienta
     project: pairclienta/pairclienta.csproj
   - name: redis
-    tags:
-      - be
     image: redis
     bindings:
       - port: 6379
         connectionString: ${host}:${port}
   - name: redis-cli
-    tags:
-      - be
     image: redis
     args: "redis-cli -h redis MONITOR"
+  - name: rabbitmq
+    image: rabbitmq:3-management
+    bindings:
+      - name: mq_binding
+        port: 5672
+        protocol: rabbitmq
+      - name: mui_binding
+        port: 15672
