Add queue consumer
Add queue consumer

--- a/src/tye.yaml
+++ b/src/tye.yaml
@@ -18,6 +18,9 @@ services:
   - name: pairclientc
     project: pairclientc/pairclientc.csproj
     replicas: 4
+  - name: pairqconsumer
+    project: pairqconsumer/pairqconsumer.csproj
+    replicas: 1
   - name: redis
     image: redis
     bindings:
